--- a/credit_bancaire/views/credit_echeance.xml
+++ b/credit_bancaire/views/credit_echeance.xml
@@ -12,22 +12,22 @@
         <field name="doall" eval="True"/>
     </record>
     <record id="credit_echeance_view_search" model="ir.ui.view">
-            <field name="name">credit.echeance.search</field>
-            <field name="model">credit.echeance</field>
-            <field name="arch" type="xml">
-                <search string="Echeances">
-                    <field name="banque" string="Banque"/>
-                    <field name="type" string="Ligne de crédit"/>
-                    <field name="facture" string="N° Facture"/>
-                    <filter name="en_retard" string="En retard" domain="[('is_retard', '=', True)]"/>
-                    <filter name="paid" string="Payé" domain="[('state', '=', 'paid')]"/>
-                    <filter name="not_paid" string="Non Payé" domain="[('state', '=', 'not_paid')]"/>
-                    <group expand="0" string="Group By">
-                        <filter name="state" string="Etat" domain="[]" context="{'group_by':'state'}"/>
-                    </group>
-                </search>
-             </field>
-        </record>
+        <field name="name">credit.echeance.search</field>
+        <field name="model">credit.echeance</field>
+        <field name="arch" type="xml">
+            <search string="Echeances">
+                <field name="banque" string="Banque"/>
+                <field name="type_ids" widget="many2many_tags" string="Ligne de crédit"/>
+                <field name="facture" string="N° Facture"/>
+                <filter name="en_retard" string="En retard" domain="[('is_retard', '=', True)]"/>
+                <filter name="paid" string="Payé" domain="[('state', '=', 'paid')]"/>
+                <filter name="not_paid" string="Non Payé" domain="[('state', '=', 'not_paid')]"/>
+                <group expand="0" string="Group By">
+                    <filter name="state" string="Etat" domain="[]" context="{'group_by':'state'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
     <record id="view_gestion_echeance_tree" model="ir.ui.view">
         <field name="name">credit.gestion.echeance.tree</field>
         <field name="model">credit.echeance</field>
@@ -39,7 +39,7 @@
                                 type="object"/>-->
                 </header>
                 <field name="banque"/>
-                <field name="type"/>
+                <field name="type_ids" widget="many2many_tags" string="Ligne de crédit"/>
                 <field name="echeance_date" optional="show"/>
                 <field name="montant_a_rembourser" sum="Total amount" widget="monetary" optional="show"/>
                 <field name="fournisseur" optional="show"/>
@@ -48,11 +48,35 @@
             </tree>
         </field>
     </record>
+    <record id="view_gestion_echeance_form" model="ir.ui.view">
+        <field name="name">credit.gestion.echeance.form</field>
+        <field name="model">credit.echeance</field>
+        <field name="arch" type="xml">
+            <form create="false">
+                <header>
+                    <button name="validate_payment" string="Payer"
+                                class="btn-primary"
+                                type="object"/>
+                </header>
+                <sheet>
+                    <group>
+                        <field name="banque"/>
+                        <field name="type_ids" widget="many2many_tags" string="Ligne de crédit"/>
+                        <field name="echeance_date" />
+                        <field name="montant_a_rembourser"  widget="monetary" />
+                        <field name="fournisseur" />
+                        <field name="facture"/>
+                    </group>
+                </sheet>
+
+            </form>
+        </field>
+    </record>
 
     <record id="gestion_echeance_action" model="ir.actions.act_window">
         <field name="name">Échéances a venir</field>
         <field name="res_model">credit.echeance</field>
-        <field name="view_mode">tree</field>
+        <field name="view_mode">tree,form</field>
         <field name="context">{'search_default_not_paid': 1}</field>
     </record>
 
