--- a/credit_bancaire/views/credit_menu.xml
+++ b/credit_bancaire/views/credit_menu.xml
@@ -3,7 +3,7 @@
 
     <!-- LE Menu d'MGX  -->
     <menuitem id="menu_credit"
-              name="Credit bancaire"
+              name="Crédit bancaire"
               groups="group_credit_user"
               parent="account_accountant.menu_accounting"
               sequence="10"/>
@@ -30,10 +30,7 @@
               sequence="10"/>
 
     <menuitem id="montage_credit"
-              name="Montage dossier credit"
+              name="Montage dossier crédit"
               parent="menu_credit"
               sequence="14"/>
-
-
-
 </odoo>
