--- a/credit_bancaire/views/credit_operation_deb.xml
+++ b/credit_bancaire/views/credit_operation_deb.xml
@@ -26,27 +26,36 @@
                     <group>
                         <group>
                             <field name="banque_id"/>
-                            <field name="type"/>
+                            <field name="type_ids" widget="many2many_tags" string="Ligne de crédit"/>
                             <field name="ligne_autorisation"/>
+                            <field name="type"/>
                             <field name="reference_credit"/>
                             <field name="ref_interne"/>
-                            <field name="amount_invoice" invisible="type not in [2,3]"/>
-                            <field name="client"/>
-                            <field name="taux" widget="percentage"/>
+                            <field name="numero_traite" invisible="type_id != 18"/>
+                            <field name="amount_invoice" invisible="type_id not in [2,3]"/>
+                            <field name="partner_id" invisible="type_id in [4,5]"/>
+                            <field name="partner_id" invisible="type_id not in [4,5]" domain="[('partner_type', '=', 'supplier'),('supplier_type', '=', 'etranger')]"/>
+                            <field name="taux" widget="percentage" invisible="type_id == 4"/>
                             <field name="type_ligne" invisible="1"/>
                             <field name="type_id" invisible="1"/>
+                            <field name="montant_total_comp" invisible="1"/>
+                            <field name="montant_remb_comp" invisible="1"/>
                             <!--<field name="folder_id" invisible="1"/>-->
                         </group>
                         <group invisible="type_id in [4]">
-                            <field name="montant_debloque"/>
+                            <field name="montant_debloque" />
                             <field name="montant_add"/>
                             <field name="montant_total" readonly="type_ligne in ['1', '3']"/>
                             <field name="montant_rembourser"/>
-                            <field name="deblocage_date"/>
+                            <field name="deblocage_date" invisible="type_id == 18"/>
+                            <field name="deblocage_date" invisible="type_id != 18" string="Date d'escompte"/>
+                            <field name="date_prevue_deblocage" invisible="type_id == 18"/>
+                            <field name="date_prevue_deblocage" invisible="type_id != 18"
+                                   string="Date prevue d'escompte"/>
                             <field name="echeance_date"/>
                         </group>
                         <group invisible="type_id not in [4]">
-                            <field name="montant_debloque"  string="Montant LC"/>
+                            <field name="montant_debloque" string="Montant LC (DA)"/>
                             <field name="deblocage_date" string="Date d'ouverture"/>
                         </group>
                     </group>
@@ -79,19 +88,35 @@
             <tree sample="1">
                 <field name="name" readonly="1"/>
                 <field name="ligne_autorisation"/>
-                <field name="banque_id"/>
                 <field name="type"/>
+                <field name="banque_id"/>
                 <field name="deblocage_date"/>
                 <field name="echeance_date" optional="show"/>
                 <field name="reference_credit" optional="hide"/>
                 <field name="ref_interne" optional="hide"/>
-                <field name="client"/>
+                <field name="partner_id"/>
                 <field name="montant_debloque" sum="Total amount" widget="monetary" optional="show"/>
                 <field name="montant_rembourser" sum="Total amount" widget="monetary" optional="show"/>
+                <field name="state" widget="badge" decoration-info="state == 'draft'" decoration-success="state == 'confirmed'"
+                       decoration-warning="state == 'extended'"/>
             </tree>
         </field>
     </record>
-
+    <record id="credit_operation_deb_search" model="ir.ui.view">
+        <field name="name">credit.operation.deb.search</field>
+        <field name="model">credit.operation.deb</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="name" filter_domain="['|', ('name','ilike',self), ('res_model','ilike',self)]"
+                       string="Action"/>
+                <filter string="Prévisionnel" name="previsionnel" domain="[('state', '=', 'draft')]"/>
+                <filter string="Confirmé" name="confirmed" domain="[('state', '=', 'confirmed')]"/>
+                <group>
+                    <filter string="Etat" name="state" context="{'group_by':'state'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
     <record id="operation_deb_1_action" model="ir.actions.act_window">
         <field name="name">Crédit d'Exploitation</field>
         <field name="res_model">credit.operation.deb</field>
